Allow captions to wrap on small screens, to prevent pushing actions across

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -27,6 +27,7 @@
     display: flex;
     gap: var(--zn-spacing-x-small);
     align-items: center;
+    text-wrap: auto;
   }
 
   &--has-breadcrumb {
